tests/fixtures/invalid/pow_int_none_set.py
# Cannot call pow() with Int, None, Set[int]
x = pow(1, None, {1, 2, 3})
